实现功能：     1、新增租户的时候创建一个默认角色数据； 问题：     1、国际化不生效了；     2、校验用户名唯一性，应该写sql关联表查询；如果这样，domain服务又有点空空的，但是查数据又像是infra层的事     3、应用服务层的各个id判断，在domain层又做了一次，感觉有点冗余，     4、默认角色里面有哪些权限还未定